--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -27,6 +27,8 @@ linter:
     prefer_const_constructors: true
     prefer_const_literals_to_create_immutables: true
     unnecessary_const: false
+    prefer_single_quotes: true
+
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
 # Additional information about this file can be found at
